--- a/springboot/.classpath
+++ b/springboot/.classpath
@@ -78,7 +78,7 @@
 	<classpathentry kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-core-5.0.11.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-5.0.11.Final.jar" sourcepath="D:/mavenresp/mvn/org/hibernate/hibernate-core/5.0.11.Final/hibernate-core-5.0.11.Final-sources.jar"/>
 	<classpathentry kind="lib" path="lib/hibernate-entitymanager-5.0.11.Final.jar"/>
 	<classpathentry kind="lib" path="lib/spring-data-jpa-1.10.6.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
