--- a/springboot/src/application.yml
+++ b/springboot/src/application.yml
@@ -11,6 +11,7 @@ spring:
        hibernate:
 #        create create-drop 应用停止会删除表 none validate
           ddl-auto: update
+          current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext 
        show-sql: true
      thymeleaf:                                                     
           prefix: classpath:/templates/
