--- a/spring/WebContent/WEB-INF/web.xml
+++ b/spring/WebContent/WEB-INF/web.xml
@@ -9,6 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+  		<filter-name>allow-all-domain</filter-name>
+  		<filter-class>com.fliter.allow_All_domain</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>allow-all-domain</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
@@ -25,6 +33,10 @@
     <servlet-name>default</servlet-name>
     <url-pattern>*.woff2</url-pattern>
   </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.woff</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.js</url-pattern>
@@ -40,6 +52,10 @@
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.png</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.css.map</url-pattern>
   </servlet-mapping>
   <servlet>
     <servlet-name>spring</servlet-name>
